// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable Canvas setupCurrentTransform setting current transform event 100x100 1`] = `
{
  "action": "drag",
  "actionHandler": [Function],
  "actionPerformed": false,
  "altKey": false,
  "corner": "",
  "ex": 100,
  "ey": 100,
  "height": 50,
  "lastX": 100,
  "lastY": 100,
  "offsetX": 25,
  "offsetY": 25,
  "originX": "left",
  "originY": "top",
  "original": {
    "angle": 0,
    "flipX": false,
    "flipY": false,
    "left": 75,
    "originX": "left",
    "originY": "top",
    "scaleX": 1,
    "scaleY": 1,
    "skewX": 0,
    "skewY": 0,
    "top": 75,
  },
  "scaleX": 1,
  "scaleY": 1,
  "shiftKey": false,
  "skewX": 0,
  "skewY": 0,
  "target": "rect",
  "theta": 0,
  "width": 50,
}
`;

exports[`Selectable Canvas setupCurrentTransform setting current transform event over TL 1`] = `
{
  "action": "scale",
  "actionHandler": [Function],
  "actionPerformed": false,
  "altKey": false,
  "corner": "tl",
  "ex": 69,
  "ey": 69,
  "height": 50,
  "lastX": 69,
  "lastY": 69,
  "offsetX": -6,
  "offsetY": -6,
  "originX": "right",
  "originY": "bottom",
  "original": {
    "angle": 0,
    "flipX": false,
    "flipY": false,
    "left": 75,
    "originX": "right",
    "originY": "bottom",
    "scaleX": 1,
    "scaleY": 1,
    "skewX": 0,
    "skewY": 0,
    "top": 75,
  },
  "scaleX": 1,
  "scaleY": 1,
  "shiftKey": false,
  "skewX": 0,
  "skewY": 0,
  "target": "rect",
  "theta": 0,
  "width": 50,
}
`;

exports[`Selectable Canvas setupCurrentTransform setting current transform event over skew ML 1`] = `
{
  "action": "skewY",
  "actionHandler": [Function],
  "actionPerformed": false,
  "altKey": false,
  "corner": "ml",
  "ex": 69,
  "ey": 95,
  "height": 50,
  "lastX": 69,
  "lastY": 95,
  "offsetX": -6,
  "offsetY": 20,
  "originX": "right",
  "originY": "top",
  "original": {
    "angle": 0,
    "flipX": false,
    "flipY": false,
    "left": 75,
    "originX": "right",
    "originY": "top",
    "scaleX": 1,
    "scaleY": 1,
    "skewX": 0,
    "skewY": 0,
    "top": 75,
  },
  "scaleX": 1,
  "scaleY": 1,
  "shiftKey": true,
  "skewX": 0,
  "skewY": 0,
  "target": "rect",
  "theta": 0,
  "width": 50,
}
`;
